--- a/app/src/main/res/layout-land/activity_post_pop_up.xml
+++ b/app/src/main/res/layout-land/activity_post_pop_up.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/component_color"
     tools:context=".PostPopUpActivity"
     >
 
@@ -93,6 +94,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="5dp"
                     android:text=""
+                    android:textStyle="bold"
                     android:textSize="16sp"
                     app:layout_constraintBottom_toBottomOf="@id/cv_main_user"
                     app:layout_constraintStart_toEndOf="@id/cv_main_user"
@@ -135,7 +137,7 @@
                         android:layout_marginEnd="50dp"
                         android:layout_marginBottom="5dp"
                         android:text=" Lorem Ipsum."
-                        android:textSize="18sp"
+                        android:textSize="12sp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -159,10 +161,11 @@
                         android:layout_marginEnd="15dp"
                         android:layout_marginBottom="5dp"
                         android:text="a"
-                        android:textSize="20sp"
-                        app:layout_constraintBottom_toBottomOf="@id/iv_post_like_btn"
+                        android:textStyle="bold"
+                        android:textSize="14sp"
+                        app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toTopOf="@id/iv_post_like_btn" />
+                        app:layout_constraintTop_toTopOf="parent" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
                 <LinearLayout
