--- a/app/src/main/res/layout-land/post_item.xml
+++ b/app/src/main/res/layout-land/post_item.xml
@@ -55,7 +55,7 @@
             android:layout_marginBottom="5dp"
             android:maxLines="1"
             android:text=" Lorem Ipsum."
-            android:textSize="18sp"
+            android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -65,6 +65,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="5dp"
+            android:textSize="12sp"
             android:text="@string/show_more"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@id/tv_detail_post_list_contents" />
@@ -87,10 +88,11 @@
             android:layout_marginEnd="15dp"
             android:layout_marginBottom="5dp"
             android:text="a"
-            android:textSize="20sp"
-            app:layout_constraintBottom_toBottomOf="@id/iv_detail_post_like_btn"
+            android:textStyle="bold"
+            android:textSize="14sp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@id/iv_detail_post_like_btn" />
+            app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -128,7 +130,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
             android:text=" Lorem Ipsum."
-            android:textSize="16sp"
+            android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="@id/cv_detail_post_comment_ic"
             app:layout_constraintStart_toEndOf="@id/cv_detail_post_comment_ic"
             app:layout_constraintTop_toTopOf="@id/cv_detail_post_comment_ic" />
