--- a/app/src/main/res/layout/main_post_item.xml
+++ b/app/src/main/res/layout/main_post_item.xml
@@ -18,6 +18,7 @@
             android:layout_marginStart="10dp"
             android:layout_marginTop="5dp"
             android:layout_marginBottom="5dp"
+            android:elevation="5dp"
             app:cardCornerRadius="100dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -40,6 +41,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
             android:text=" Lorem Ipsum."
+            android:textStyle="bold"
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="@id/cv_main_post_user"
             app:layout_constraintStart_toEndOf="@id/cv_main_post_user"
@@ -96,7 +98,7 @@
             android:layout_marginBottom="5dp"
             android:maxLines="1"
             android:text=" Lorem Ipsum."
-            android:textSize="18sp"
+            android:textSize="12sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"/>
@@ -106,6 +108,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="5dp"
+            android:textSize="12sp"
             android:text="@string/show_more"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@id/tv_main_post_content" />
@@ -128,9 +131,10 @@
             android:layout_marginEnd="15dp"
             android:layout_marginBottom="5dp"
             android:text="a"
-            android:textSize="20sp"
-            app:layout_constraintBottom_toBottomOf="@id/iv_main_post_like_btn"
+            android:textStyle="bold"
+            android:textSize="14sp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@id/iv_main_post_like_btn" />
+            app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </LinearLayout>
